--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 *.msi
 Discord-Infinite-Ping/Discord-Infinite-Ping/bin/Release/	
+Discord-Infinite-Ping/Discord-Infinite-Ping/bin/Release/netcoreapp3.1/publish/Discord-Infinite-Ping/Discord-Infinite-Ping.exe
